--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--HEADER-->
 		<div class="jumbotron">
 			<div class="jumbotron-text">
-               <img class="hov" src="/home/jerry/Documents/h_img.jpg" alt="" />
+                   <div style="background-image: url('/home/jerry/Documents/h_img.jpg');">
 				<img src="assets/logo/logo.png" alt="logo" />
 				<h1>WELCOME <br> TO DELANI STUDIO</h1>
 				<p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN FUN ENVIRONMENT.</p>
