--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 		<!--HEADER-->
 		<div class="jumbotron">
 			<div class="jumbotron-text">
-                   <div style="background-image: url('/home/jerry/Documents/h_img.jpg');">
+				<sytle>
+                   div{background-image: url('/home/jerry/Documents/h_img.jpg');
+		          }
+					</style>		
 				<img src="assets/logo/logo.png" alt="logo" />
 				<h1>WELCOME <br> TO DELANI STUDIO</h1>
 				<p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN FUN ENVIRONMENT.</p>
