--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--HEADER-->
 		<div class="jumbotron">
 			<div class="jumbotron-text">
-				<sytle>
+				<style>
                    div{background-image: url('/home/jerry/Documents/h_img.jpg');
 		          }
 					</style>		
