--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<div class="jumbotron">
 			<div class="jumbotron-text">
 				<style>
-                   div{background-image: url('/home/jerry/Documents/h_img.jpg');
+                   div{
+    background-image: url(../assets/backgrounds/h_img.jpg);
 		          }
 					</style>		
 				<img src="assets/logo/logo.png" alt="logo" />
