--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				
 				<style>
                    div{
-    background-image: url(../assets/backgrounds/h_img.jpg);
+    background-image: url('../assets/backgrounds/h_img.jpg');
 		          }
 					</style>		
 				<h1>WELCOME <br> TO DELANI STUDIO</h1>
