--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			<br>
 			<div class="textbox">
 				<label class="sr-only" for="textbox">textbox</label>
-				<textarea class="form-control" rows="8">Your message here....</textarea>
+				<textarea class="form-control" rows="8" text="Your message here...."/></textarea>
 			</div>
 			<br>
 			<div>
