--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<div class="cont">
 		<!--HEADER-->
 		<div class="jumbotron">
-			<div class="jumbotron-text">		
+			<div class="jumbotron-text">
+				<div style="background-image: url('/home/jerry/Documents/Delani-studio/css/assets/backgrounds/h-image.jpg');">
 				<img src="assets/logo/logo.png" alt="logo" />
 				
 				<h1>WELCOME <br> TO DELANI STUDIO</h1>
