--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>DELANI STUDIO</title>
 	<link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/master.css" />
+	<link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
