--- a/index.html
+++ b/index.html
@@ -230,12 +230,11 @@
 			</div>
 			<p>DELANI STUDIO</p>
 			<p>2019</p>
+			<p>The DELANI STUDIO recreated by Jerry Nabango.
+			Copyright(c)2020.All rights reserved.
+				P.O BOX:999666,Nairobi,Kenya.</p>
 		</div> 
 	</div>
-	<div class="jumbotron text-center" style=margin-bottom:20px>
-	   <p>The DELANI STUDIO recreated by Jerry Nabango.
-		Copyright(c)2020.All rights reserved.
-		 P.O BOX:999666,Nairobi,Kenya.
 
 	<script src="js/jquery-3.4.1.js"></script>
 	<script src="js/scripts.js"></script>
